refactor: removendo libs de testes e classes