@@ -13,7 +13,7 @@ android {
     defaultConfig {
         minSdk = 26
 
-        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+        
         consumerProguardFiles("consumer-rules.pro")
     }
 
@@ -48,12 +48,6 @@ android {
             )
         }
     }
-}
-
-tasks.withType<Test> {
-    jvmArgs("--add-opens=java.base/java.time=ALL-UNNAMED")
-
-    useJUnitPlatform()
 }
 
 dependencies {
